// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A model field with type Boolean maps to GraphQL Boolean scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  String
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
    /**
     * ### 📔 Missing Field Documentation for \`foo\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   foo  Boolean
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    foo: {
      /**
       * The name of this field.
       */
      name: 'foo'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'Boolean'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`A model field with type DateTime maps to GraphQL DateTime custom scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  String
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
    /**
     * ### 📔 Missing Field Documentation for \`foo\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   foo  DateTime
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    foo: {
      /**
       * The name of this field.
       */
      name: 'foo'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'DateTime'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`A model field with type Float maps to GraphQL Float scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  String
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
    /**
     * ### 📔 Missing Field Documentation for \`foo\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   foo  Float
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    foo: {
      /**
       * The name of this field.
       */
      name: 'foo'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'Float'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`A model field with type Int maps to GraphQL Int scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  String
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
    /**
     * ### 📔 Missing Field Documentation for \`foo\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   foo  Int
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    foo: {
      /**
       * The name of this field.
       */
      name: 'foo'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'Int'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`A model field with type Int, attribute @id, maps to GraphQL ID scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  Int
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`A model field with type Json maps to GraphQL Json custom scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  String
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
    /**
     * ### 📔 Missing Field Documentation for \`foo\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   foo  Json
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    foo: {
      /**
       * The name of this field.
       */
      name: 'foo'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'Json'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;

exports[`A model field with type String, attribute @id, maps to GraphQL ID scalar 1`] = `
"import * as Nexus from 'nexus'
import * as NexusCore from 'nexus/dist/core'

//
// Types
//

declare namespace $Types {
  // Models

  /**
   * ### 📔 Missing Model Documentation for \`SomeModel\`
   * 
   * Get JSDoc documentation for this model automatically by documenting
   * it in your Prisma Schema ✨!
   * 
   * To document a model add a tripple slash comment above it.
   * 
   * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
   * 
   * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// Lorem ipsum dolor sit amet...
   * model SomeModel {
   *   id  String  @id
   * }
   * \`\`\`
   * 
   * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
   * 
   * \`\`\`prisma
   * /// A user record. A user maps 1:1 with a person. Not
   * /// to be confused with an \`Account\` which on person
   * /// may have multiple of, all linked to a single \`User\`.
   * model User {
   *   id  String  @id
   * }
   * \`\`\`
   */
  interface SomeModel {
    $name: 'SomeModel'
    $description: null
    /**
     * ### 📔 Missing Field Documentation for \`id\`
     * 
     * Get JSDoc documentation for this field automatically by documenting
     * it in your Prisma Schema ✨!
     * 
     * To document a field add a tripple slash comment above it.
     * 
     * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
     * 
     * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model SomeModel {
     *   /// Lorem ipsum dolor sit amet.
     *   id  String
     * }
     * \`\`\`
     * 
     * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
     * 
     * \`\`\`prisma
     * model User {
     *   /// Identifier for a user. Will never change once set.
     *   /// More stable than the \`handle\` field  which user
     *   /// _can_ change, but is not human-friendly. Prefer this
     *   /// for machine consumers but prefer \`handle\` for human
     *   /// visible things like URL slugs.
     *   id  String  @id
     * }
     * \`\`\`
     */
    id: {
      /**
       * The name of this field.
       */
      name: 'id'
    
      /**
       * The type of this field.
       */
      type: NexusCore.NexusNonNullDef<'ID'>
    
      /**
       * The documentation of this field.
       */
      description: undefined
    }
  }

  // Enums

  // N/A –– You have not defined any models in your Prisma schema file.
}


//
// Exports
//

// Models

/**
 * ### 📔 Missing Model Documentation for \`SomeModel\`
 * 
 * Get JSDoc documentation for this model automatically by documenting
 * it in your Prisma Schema ✨!
 * 
 * To document a model add a tripple slash comment above it.
 * 
 * Learn more about Prisma Schema comments [here](https://www.prisma.io/docs/concepts/components/prisma-schema#comments).
 * 
 * #### ––––––––––––––––––––––––– Example 1 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// Lorem ipsum dolor sit amet...
 * model SomeModel {
 *   id  String  @id
 * }
 * \`\`\`
 * 
 * #### ––––––––––––––––––––––––– Example 2 –––––––––––––––––––––––––
 * 
 * \`\`\`prisma
 * /// A user record. A user maps 1:1 with a person. Not
 * /// to be confused with an \`Account\` which on person
 * /// may have multiple of, all linked to a single \`User\`.
 * model User {
 *   id  String  @id
 * }
 * \`\`\`
 */
export const SomeModel: $Types.SomeModel

// Enums

// N/A –– You have not defined any models in your Prisma schema file."
`;
